# sort_and_choose_images

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cz.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
deployment/: Dockerfile
dev/: explore_pickle_file.py
src/: config.py  fastapi_server.py  picture_selector.py
src/models/: images.py
src/routers/: classify_page_entrypoints.py  db_managment_entrypoints.py  db_router.py  face_managment.py  face_processing.py  groups_page_entrypoints.py  image_managment.py  similarity_entrypoints.py  video_managment.py
src/services/: face_reid.py  faces_db_service.py  groups_db.py  groups_db_service.py  images_db_service.py  redis_service.py
src/static/: groups.html  images.html  ron.html  similar_faces.html  similar_groups.html
src/static/css/: images.css
src/static/js/: images.js
src/utils/: model_pydantic.py
tests/: test_face_recognition_service.py  test_images_db_service.py  test_video_managment.py
