[tool.poetry]
readme = "README.md"
### After creating a project with this template, please modify these files
# edit your project name
name = "sort-and-choose-images"
# edit your project's version. you can start with 0.1.0 for initial version
version = "0.4.0"
# edit your project's description
description = "testing how prefect works"
# edit your projects' authors
authors = ["MoziCo <mozico.bv@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
loguru = "^0.7.2"
commitizen = "^3.31.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
exifread = "^3.0.0"
httpx = "^0.28.0"
numpy = "^2.1.3"
redis = "^5.2.1"
pydantic-settings = "^2.6.1"
tinydb = "^4.8.2"
opencv-python = "^4.10.0.84"
tqdm = "^4.67.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.4.1"
pytest = "^8.2"
pytest-mock = "^3.10.0"
commitizen = "^3.29.1"
typing-extensions = "^4.12.2"
pytest-asyncio = "^0.25.1"


[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
ignore = [
    "F821", # Unknown name (disabled because it doesnt respect annotation postponing),
    "E501", # long lines
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

### uncomment these to make mypy event more strict
# follow_imports = "silent"
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# check_untyped_defs = true
# no_implicit_reexport = true

### for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true
